force-app/main/default/objects/AsyncRequest__c/fields/Delete_Me__c.field-meta.xml
<CustomField>
    <fullName>Delete_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set this to true if you do not want it to be processed asyncronously.  deletions will be reviewed every 5 minutes by informatica</description>
    <label>Delete Me</label>
    <type>Checkbox</type>
</CustomField>