force-app/main/default/objects/AsyncRequest__c/fields/Error_Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace_String__c</fullName>
    <label>Error Stack Trace String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>