force-app/main/default/objects/AsyncRequest__c/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>