force-app/main/default/objects/AsyncRequest__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <label>Process Date</label>
    <type>Date</type>
</CustomField>