force-app/main/default/objects/AsyncRequest__c/fields/Queueable__c.field-meta.xml
<CustomField>
    <fullName>Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True:  this async is processed by the queueable interface, False: this async is processed by scheduled batch</inlineHelpText>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>