force-app/main/default/objects/AsyncRequest__c/fields/Slow__c.field-meta.xml
<CustomField>
    <fullName>Slow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Slow ASRs can get blocked by UHIT traffic update, etc.  Only check this box if your job can wait for hours (could be at least 8 during overnight hours)</description>
    <inlineHelpText>Slow ASRs can get blocked by UHIT traffic update, etc.  Only check this box if your job can wait for hours (could be at least 8 during overnight hours)</inlineHelpText>
    <label>Slow</label>
    <type>Checkbox</type>
</CustomField>