force-app/main/default/objects/AsyncRequest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ApplyClosestWeatherStation</fullName>
            </value>
            <value>
                <fullName>BuildTOULoadProfile</fullName>
            </value>
            <value>
                <fullName>ChatterPostTest</fullName>
            </value>
            <value>
                <fullName>ChatterPostTestParamIsMessage</fullName>
            </value>
            <value>
                <fullName>CheckCirro</fullName>
            </value>
            <value>
                <fullName>CheckContactChangesForCES</fullName>
            </value>
            <value>
                <fullName>CheckDirect</fullName>
            </value>
            <value>
                <fullName>CheckRecordsToSyncExist</fullName>
            </value>
            <value>
                <fullName>CheckSyncBatchStatusForOffice</fullName>
            </value>
            <value>
                <fullName>Choice Position Liquidation Future</fullName>
            </value>
            <value>
                <fullName>CreateChoicePositions</fullName>
            </value>
            <value>
                <fullName>DailyToMonthly</fullName>
            </value>
            <value>
                <fullName>KeepAlive</fullName>
            </value>
            <value>
                <fullName>LockChoiceRate</fullName>
            </value>
            <value>
                <fullName>lowCodeInventory</fullName>
            </value>
            <value>
                <fullName>MakeUHITCleanupCallout</fullName>
            </value>
            <value>
                <fullName>OldScheduledCleanup</fullName>
            </value>
            <value>
                <fullName>PIIfromOrder</fullName>
            </value>
            <value>
                <fullName>PlaceDirectOrder</fullName>
            </value>
            <value>
                <fullName>PlaceTriEagleOrder</fullName>
            </value>
            <value>
                <fullName>ProcessRecordLock</fullName>
            </value>
            <value>
                <fullName>RateExceptionChange</fullName>
            </value>
            <value>
                <fullName>RatingsUpdate</fullName>
            </value>
            <value>
                <fullName>RefreshAccountActiveStateField</fullName>
            </value>
            <value>
                <fullName>RefreshPartnerAccountActiveStateField</fullName>
            </value>
            <value>
                <fullName>RemoveExpirationDatesFromPreviousOrders</fullName>
            </value>
            <value>
                <fullName>SetREPofRecord</fullName>
            </value>
            <value>
                <fullName>SetTrueCostOrderRecordType</fullName>
            </value>
            <value>
                <fullName>StaticChoiceCosts</fullName>
            </value>
            <value>
                <fullName>TriEagleOrderCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>