force-app/main/default/objects/AsyncRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Slow__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>