force-app/main/default/objects/AsyncRequest__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Slow__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <language>en_US</language>
</ListView>