force-app/main/default/objects/AsyncRequest__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Line_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Errors</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>