force-app/main/default/objects/AsyncRequest__c/listViews/Now.listView-meta.xml
<ListView>
    <fullName>Now</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Process_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Now</label>
    <language>en_US</language>
</ListView>