force-app/main/default/objects/AsyncRequest__c/listViews/Now_Not_Slow.listView-meta.xml
<ListView>
    <fullName>Now_Not_Slow</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Queueable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Process_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Slow__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Now Not Slow</label>
    <language>en_US</language>
</ListView>