force-app/main/default/objects/AsyncRequest__c/listViews/Slow.listView-meta.xml
<ListView>
    <fullName>Slow</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Slow__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Slow</label>
    <language>en_US</language>
</ListView>