force-app/main/default/objects/AsyncRequest__c/listViews/TriEagle_Order.listView-meta.xml
<ListView>
    <fullName>TriEagle_Order</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Slow__c</columns>
    <columns>Type__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Queueable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>PlaceTriEagleOrder</value>
    </filters>
    <label>TriEagle Order</label>
    <language>en_US</language>
</ListView>