force-app/main/default/objects/AsyncRequest__c/listViews/UHIT.listView-meta.xml
<ListView>
    <fullName>UHIT</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stack_Trace_String__c</columns>
    <columns>Params__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Slow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>UHIT</value>
    </filters>
    <label>UHIT</label>
    <language>en_US</language>
</ListView>